--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
         <meta name="description" content="A website with focus on CSS">
         <meta name="robots" content="none">
         
-        <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=IBM Plex Mono'>
+        <!-- h1 of /02/--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Slackside+One&display=swap">
+        <!-- body maybe--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
+        <!-- links--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
+        <!-- for h3 maybe--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap">
+
         <link rel="stylesheet" media="screen" href="./css/01/base-style.css">
-        <link rel="stylesheet" media="screen" href="./css/01/navbar.css">
+        <link rel="stylesheet" media="screen" href="./css/02/navbar.css">
         <link rel="stylesheet" media="screen" href="./css/01/sections.css">
 
 
@@ -118,6 +122,7 @@
             </section>
 
             <section id="projects">
+                <h3>Projects</h3>
                 <div>
                     <h4>Weather Plotting and Visualization</h4>
                     <span hidden>Fall 2022</span>
