Adds section styling
Adds styling to section-titles
Adds different styles to alternating sections

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         </navbar>
         <div id="body-container">
             <section id="about" role="article">
-                <h3>About</h3>
+                <h3 class="section-title">About</h3>
                 <p> I'm a Software Engineer with interests in Distributed Systems, and Backend Engineering.
                     I'm building front-end design skills to eventually be a full-stack developer.
                 </p>
             </section>
 
             <section id="education">
-                <h3>Education</h3>
+                <h3 class="section-title">Education</h3>
                 <div>
                     <h4>Indiana University</h4>
                     <span>Master of Science in Computer Science</span>
@@ -67,7 +67,7 @@
             </section>
 
             <section id="experience">
-                <h3>Experience</h3>
+                <h3 class="section-title">Experience</h3>
                 <div hidden>
                     <h4>IFERS</h4>
                     <span>Los Angeles, CA</span>
@@ -122,7 +122,7 @@
             </section>
 
             <section id="projects">
-                <h3>Projects</h3>
+                <h3 class="section-title">Projects</h3>
                 <div>
                     <h4>Weather Plotting and Visualization</h4>
                     <span hidden>Fall 2022</span>
