Adds basic styling to sections
Adds basic styling and structure to sections
Changed fonts
Updated readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- h1 of /02/--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Slackside+One&display=swap">
         <!-- body maybe--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
         <!-- links--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
-        <!-- for h3 maybe--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap">
+        <!-- for h3 maybe--><link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap">
 
         <link rel="stylesheet" media="screen" href="./css/01/base-style.css">
         <link rel="stylesheet" media="screen" href="./css/02/navbar.css">
@@ -38,26 +38,30 @@
         <div id="body-container">
             <section id="about" role="article">
                 <h3 class="section-title">About</h3>
-                <p> I'm a Software Engineer with interests in Distributed Systems, and Backend Engineering.
+                <p class="description"> I'm a Software Engineer with interests in Distributed Systems, and Backend Engineering.
                     I'm building front-end design skills to eventually be a full-stack developer.
                 </p>
             </section>
 
             <section id="education">
                 <h3 class="section-title">Education</h3>
-                <div>
-                    <h4>Indiana University</h4>
-                    <span>Master of Science in Computer Science</span>
-                    <span hidden>May 2023</span>
+                <div class="sub-section" id="iu">
+                    <h4 class="section-subheading">Indiana University</h4>
+                    <span class="location">Bloomington, IN</span>
+                    <span>Master of Science</span>
+                    <span>Computer Science</span>
+                    <span class="timeframe" hidden>May 2023</span>
                     <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Indiana_University_seal.svg" alt="Indiana Univeristy seal"/>
                     <div>
                         <p></p>
                     </div>
                 </div>
-                <div>
-                    <h4>Visvesvaraya Technological University</h4>
-                    <span>Bachelor of Engineering in Electronics and Communication Engineering</span>
-                    <span hidden>May 2019</span>
+                <div class="sub-section" id="vtu">
+                    <h4 class="section-subheading">Visvesvaraya Technological University</h4>
+                    <span class="location">Bangalore, India</span>
+                    <span>Bachelor of Engineering</span>
+                    <span>Electronics and Communication Engineering</span>
+                    <span class="timeframe" hidden>May 2019</span>
                     <img src="https://upload.wikimedia.org/wikipedia/en/a/a0/Visvesvaraya_Technological_University_logo.png" alt="VTU logo"/>
                     <div>
                         <p></p>
@@ -68,52 +72,52 @@
 
             <section id="experience">
                 <h3 class="section-title">Experience</h3>
-                <div hidden>
-                    <h4>IFERS</h4>
-                    <span>Los Angeles, CA</span>
+                <div class="sub-section" hidden>
+                    <h4 class="section-subheading">IFERS</h4>
+                    <span class="location">Los Angeles, CA</span>
                     <div>
                         <span>Volunteer</span>
-                        <span>August 2023-present</span>
+                        <span class="timeframe" hidden>Aug 2023 - Present</span>
                         <div>
                             <p></p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h4>Bloom Insurance</h4>
-                    <span>Bloomington, IN</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">Bloom Insurance</h4>
+                    <span class="location">Bloomington, IN</span>
                     <div>
                         <span>IT Software Developer Intern</span>
-                        <span>May 2022 - Dec 2022</span>
+                        <span class="timeframe">May 2022 - Dec 2022</span>
                         <div>
                             <p></p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h4>Accenture</h4>
-                    <span>Bengaluru, India</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">Accenture</h4>
+                    <span class="location">Bangalore, India</span>
                     <div>
                         <span>Software Engineer</span>
-                        <span>Jan 2020 - July 2020</span>
+                        <span class="timeframe">Jan 2020 - July 2020</span>
                         <div>
                             <p></p>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <h4>Surya Software Systems</h4>
-                    <span>Bengaluru, India</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">Surya Software Systems</h4>
+                    <span class="location">Bangalore, India</span>
                     <div>
                         <span>Software Engineer</span>
-                        <span>May 2019 - July 2019</span>
+                        <span class="timeframe">May 2019 - July 2019</span>
                         <div>
                             <p></p>
                         </div>
                     </div>
                     <div>
                         <span>Software Engineer Intern</span>
-                        <span>Jan 2019 - Apr 2019</span>
+                        <span class="timeframe">Jan 2019 - Apr 2019</span>
                         <div>
                             <p></p>
                         </div>
@@ -123,23 +127,23 @@
 
             <section id="projects">
                 <h3 class="section-title">Projects</h3>
-                <div>
-                    <h4>Weather Plotting and Visualization</h4>
-                    <span hidden>Fall 2022</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">Weather Plotting and Visualization</h4>
+                    <span class="timeframe" hidden>Fall 2022</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
-                <div>
-                    <h4>IDE Extension</h4>
-                    <span hidden>Spring 2022</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">IDE Extension</h4>
+                    <span class="timeframe" hidden>Spring 2022</span>
                     <div>
                         <p></p>
                     </div>
                 </div>
-                <div>
-                    <h4>Design Pattern Blaster</h4>
-                    <span hidden>Fall 2021</span>
+                <div class="sub-section">
+                    <h4 class="section-subheading">Design Pattern Blaster</h4>
+                    <span class="timeframe" hidden>Fall 2021</span>
                     <div>
                         <p></p>
                     </div>
