Adds details to education section and styling
improves styling of education section
Adds relevant coursework to the education section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                     <span class="timeframe" hidden>May 2023</span>
                     <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Indiana_University_seal.svg" alt="Indiana Univeristy seal"/>
                     <div>
-                        <p></p>
+                        <h5>Relevant Coursework</h5>
+                        <p class="description">
+                            Object-Oriented Software Development, Applied Algorithms, Applied Distributed Systems, Security
+in Networked Systems, Database Design, Advanced Operating Systems, Computer Networks
+                        </p>
                     </div>
                 </div>
                 <div class="sub-section" id="vtu">
@@ -64,7 +68,10 @@
                     <span class="timeframe" hidden>May 2019</span>
                     <img src="https://upload.wikimedia.org/wikipedia/en/a/a0/Visvesvaraya_Technological_University_logo.png" alt="VTU logo"/>
                     <div>
-                        <p></p>
+                        <h5>Relevant Coursework</h5>
+                        <p class="description">
+                            Introduction to Programming with C, Programming with Data Structures, Logic Design, Digital Signal Processing, Microcontroller Programming, Information Theory and Coding, Digital Experience Management using Adobe Experience Manager, Digital Communication, Embedded System Design, Routing and Switching using Cisco Network Devices (CCN), Data Analytics, Wireless and Mobile Communications, VMWare Virtualization Essentials
+                        </p>
                     </div>
 
                 </div>
@@ -79,7 +86,7 @@
                         <span>Volunteer</span>
                         <span class="timeframe" hidden>Aug 2023 - Present</span>
                         <div>
-                            <p></p>
+                            <p class="description"></p>
                         </div>
                     </div>
                 </div>
@@ -101,7 +108,7 @@
                         <span>Software Engineer</span>
                         <span class="timeframe">Jan 2020 - July 2020</span>
                         <div>
-                            <p></p>
+                            <p class="description"></p>
                         </div>
                     </div>
                 </div>
