Adds details to experience and project sections
Adds details to experience and project sections
Styling changes

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                         <span class="timeframe" hidden>Aug 2023 - Present</span>
                         <div>
                             <p class="description"></p>
+                            <ul class="details">
+                                <li>Redesigned logo of the website, moving from a raster image file to a scalable vector</li>
+                                <li>Implemented CSS based design of website, making future changes to design modularized and easier</li>
+                                <li>Implemented a decision tree based chat box to help visitors understand how they can contribute to the organization.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -97,7 +102,14 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                         <span>IT Software Developer Intern</span>
                         <span class="timeframe">May 2022 - Dec 2022</span>
                         <div>
-                            <p></p>
+                            <p class="description"></p>
+                            <ul class="details">
+                                <li>Optimized rethrowing of exceptions, and logging, resulting in improved stack trace accuracy and faster issue resolution.</li>
+                                <li>Identified and diagnosed an unreproducible bug that caused user permissions to reset mid-session, improving overall user experience.</li>
+                                <li>Implemented a new feature allowing users to edit, and cancel incomplete form submissions, reducing support tickets and improving overall user experience.</li>
+                                <li>Collaborated with senior developers on cross-functional teams to identify and resolve a cross-platform bug in call logs that improved agent communication tracking accuracy.</li>
+                                <li>Streamlined the producer registration process by developing partial forms that utilized NIPR data, resulting in a reduction in average registration time.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -109,6 +121,10 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                         <span class="timeframe">Jan 2020 - July 2020</span>
                         <div>
                             <p class="description"></p>
+                            <ul class="details">
+                                <li>Built a web application using Spring Boot, Spring Hibernate, and Spring JPA data, to maintain records of inventory, and invoices for a clothing company.</li>
+                                <li>Worked with a major Australian telecom provider for enrollment of users and tracking status of enrollment tickets.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -119,14 +135,22 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                         <span>Software Engineer</span>
                         <span class="timeframe">May 2019 - July 2019</span>
                         <div>
-                            <p></p>
+                            <p class="description"></p>
+                            <ul class="details">
+                                <li>Maintained a Swift-based health records application for a nursing home client.</li>
+                                <li>Experimented with SwiftUI during its beta to assess its adoption and stability for use in production on final release.</li>
+                            </ul>
                         </div>
                     </div>
                     <div>
                         <span>Software Engineer Intern</span>
                         <span class="timeframe">Jan 2019 - Apr 2019</span>
                         <div>
-                            <p></p>
+                            <p class="description"></p>
+                            <ul class="details">
+                                <li>Developed and implemented a scalable Rust-based authentication service, with API for login, signup, JWT token generation and validation, and a keystore, using Diesel ORM and PostgresDB, resulting in a reduction in login latency.
+                                <li>Implemented a seamless interaction between Android and Rust by developing dynamic libraries, increasing application performance.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -138,21 +162,35 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                     <h4 class="section-subheading">Weather Plotting and Visualization</h4>
                     <span class="timeframe" hidden>Fall 2022</span>
                     <div>
-                        <p></p>
+                        <p class="description"></p>
+                        <ul class="details">
+                            <li>Created a distributed system with registry and gateway microservices using Java, Spring Boot, Hibernate, WebSocket, RabbitMQ, ExpressJS, and MySQL to plot and visualize NEXRAD weather radar data.
+                            <li>Containerized microservices with Docker, integrated load testing with JMeter, & applied horizontal scaling with Kubernetes.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="sub-section">
                     <h4 class="section-subheading">IDE Extension</h4>
                     <span class="timeframe" hidden>Spring 2022</span>
                     <div>
-                        <p></p>
+                        <p class="description"></p>
+                        <ul class="details">
+                            <li>Designed and developed an IDE extension that remotely performs code analytics and displays visualizations using the D3JS.</li>
+                            <li>Created visualizations including a Codemap consisting of a nested circular visualization of the codebase with Heat-values based on file metrics to identify modification risk and file history and zoom/pan and file search functionality.</li>
+                            <li>Developed a radar chart to provide a quick summary of files by number of authors and commits, size, and commit ratios.</li>
+                            <li>Built the frontend in TypeScript and deployed the Spring backend on Heroku to calculate metrics from git and sonarqube.</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="sub-section">
                     <h4 class="section-subheading">Design Pattern Blaster</h4>
                     <span class="timeframe" hidden>Fall 2021</span>
                     <div>
-                        <p></p>
+                        <p class="description"></p>
+                        <ul class="details">
+                            <li>Developed a Megaman-inspired side-scrolling game with 6 levels consisting of different design patterns including bridge, observer, and composite patterns where players defeated enemies and solved pattern-based puzzles with JavaFX.</li>
+                            <li>Built object collision handling classes and created in-game physics for movement, player targeted firing, enemy firing, gravity for platforming, and special jetpack movement.</li>
+                        </ul>
                     </div>
                 </div>
             </section>
