Adds socials and hidden elements
Adds socials to navbar
Hides timeline elements

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <!-- body maybe--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap">
         <!-- links--><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap">
         <!-- for h3 maybe--><link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap">
+        <!-- for social icons--><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <link rel="stylesheet" media="screen" href="./css/01/base-style.css">
         <link rel="stylesheet" media="screen" href="./css/02/navbar.css">
         <link rel="stylesheet" media="screen" href="./css/01/sections.css">
+        <link rel="stylesheet" media="screen" href="./css/01/hidden.css">
 
 
         <title>Raghunadham G</title>
@@ -33,6 +35,13 @@
                 <a href="#experience">Experience</a>
                 <a href="#projects">Projects</a>
                 <a href="./files/RaghunadhamG_Resume.pdf">Resume</a>
+            </div>
+            <div id="socials">
+                <a href="mailto:raghunadham314@gmail.com" aria-label="email"><i class="fa fa-solid fa-envelope"></i></a>
+                <a href="https://linkedin.com/in/raghunadham" aria-label="email"><i class="fa fa-brands fa-linkedin-square"></i></a>
+                <a href="https://github.com/orangatun" aria-label="email"><i class="fa fa-brands fa-github"></i></a>
+                <a hidden href="" aria-label="email"><i class="fa fa-brands fa-youtube"></i></a>
+                
             </div>
         </navbar>
         <div id="body-container">
@@ -84,7 +93,7 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                     <span class="location">Los Angeles, CA</span>
                     <div>
                         <span>Volunteer</span>
-                        <span class="timeframe" hidden>Aug 2023 - Present</span>
+                        <span class="timeframe">Aug 2023 - Present</span>
                         <div>
                             <p class="description"></p>
                             <ul class="details">
@@ -191,6 +200,16 @@ in Networked Systems, Database Design, Advanced Operating Systems, Computer Netw
                             <li>Developed a Megaman-inspired side-scrolling game with 6 levels consisting of different design patterns including bridge, observer, and composite patterns where players defeated enemies and solved pattern-based puzzles with JavaFX.</li>
                             <li>Built object collision handling classes and created in-game physics for movement, player targeted firing, enemy firing, gravity for platforming, and special jetpack movement.</li>
                         </ul>
+                    </div>
+                </div>
+                <div class="sub-section" hidden>
+                    <h4 class="section-subheading">This Website</h4>
+                    <span class="timeframe" hidden>24 hours</span>
+                    <div>
+                        <p class="description">
+                            This website was built from scratch, in 24 hours. 
+                        </p>
+                        <ul class="details"></ul>
                     </div>
                 </div>
             </section>
