Adds styling to about and education section
Adds styling to about section
Adds styling to education section
Changes to relevant coursework

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     <div>
                         <h5>Relevant Coursework</h5>
                         <p class="description">
-                            Object-Oriented Software Development, Applied Algorithms, Applied Distributed Systems, Security
-                            in Networked Systems, Database Design, Advanced Operating Systems, Computer Networks
+                            Object-Oriented Software Development, Applied Algorithms, Applied Distributed Systems, Security in Networked Systems, Database Design, Advanced Operating Systems, Computer Networks
                         </p>
                     </div>
                 </div>
@@ -82,7 +81,7 @@
                     <div>
                         <h5>Relevant Coursework</h5>
                         <p class="description">
-                            Introduction to Programming with C, Programming with Data Structures, Logic Design, Digital Signal Processing, Microcontroller Programming, Information Theory and Coding, Digital Experience Management using Adobe Experience Manager, Digital Communication, Embedded System Design, Routing and Switching using Cisco Network Devices (CCN), Data Analytics, Wireless and Mobile Communications, VMWare Virtualization Essentials
+                            Introduction to Programming, Programming with Data Structures, Logic Design, Digital Signal Processing, Microcontroller Programming, Information Theory and Coding, Digital Experience Management, Embedded System Design, Cisco - Routing and Switching (CCN), Data Analytics, VMWare Virtualization Essentials
                         </p>
                     </div>
                     
@@ -218,5 +217,6 @@
             </section>
         </div>
         <script type="text/javascript" src="./js/03/navbar.js"></script>
+        <script type="text/javascript" src="./js/03/sections.js"></script>
     </body>
 </html> 
