adds styling and js for combining old roles
Combines multiple old roles into a single unit of experience per organization.
Moves old roles in an org to the top, right under the title.
Adds styling changes.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" media="screen" href="./css/03/base-style.css">
         <link rel="stylesheet" media="screen" href="./css/03/navbar.css">
         <link rel="stylesheet" media="screen" href="./css/03/sections.css">
-        <link rel="stylesheet" media="screen" href="./css/01/hidden.css">
+        <link rel="stylesheet" media="screen" href="./css/03/hidden.css">
 
 
         <title>Raghunadham G</title>
@@ -94,7 +94,7 @@
                     <h4 class="section-subheading">IFERS</h4>
                     <span class="location">Los Angeles, CA</span>
                     <div>
-                        <span>Volunteer</span>
+                        <span>Software Engineer (Volunteer)</span>
                         <span class="timeframe">Aug 2023 - Present</span>
                         <div>
                             <p class="description"></p>
