adds links to experience section divs
Makes experience section divs clickable

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             
             <section id="experience">
                 <h3 class="section-title">Experience</h3>
-                <div class="sub-section" hidden>
+                <div class="sub-section" id="ifers" hidden>
                     <h4 class="section-subheading">IFERS</h4>
                     <span class="location">Los Angeles, CA</span>
                     <div>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="sub-section">
+                <div class="sub-section" id="bloom">
                     <h4 class="section-subheading">Bloom Insurance</h4>
                     <span class="location">Bloomington, IN</span>
                     <div>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="sub-section">
+                <div class="sub-section" id="accn">
                     <h4 class="section-subheading">Accenture</h4>
                     <span class="location">Bangalore, India</span>
                     <div>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="sub-section">
+                <div class="sub-section" id="surya">
                     <h4 class="section-subheading">Surya Software Systems</h4>
                     <span class="location">Bangalore, India</span>
                     <div>
