Adds radial gradient and updated README

--- a/index.html
+++ b/index.html
@@ -218,5 +218,8 @@
         </div>
         <script type="text/javascript" src="./js/03/navbar.js"></script>
         <script type="text/javascript" src="./js/03/sections.js"></script>
+        <script type="text/javascript" src="./js/03/background.js"></script>
+
+        <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js'></script>
     </body>
 </html> 
